Limpieza de codigo: el arranque se hace con ProcessBuilder de Java